--- a/.jslint.conf
+++ b/.jslint.conf
@@ -1,3 +1,3 @@
 {
-  predef: "Package,Meteor,Widget,Widgets,Dashboard,_"
+  "predef": "Random,SimpleSchema,Mongo,Npm,Template,Package,Meteor,Widget,Widgets,Dashboard,Dashboards,_"
 }
