--- a/.jslint.conf
+++ b/.jslint.conf
@@ -1,3 +1,3 @@
 {
-  "predef": "Random,SimpleSchema,Mongo,Npm,Template,Package,Meteor,Widget,Widgets,Dashboard,Dashboards,_"
+  "predef": "WidgetPackages,Router,Tracker,Random,SimpleSchema,Mongo,Npm,Template,Package,Meteor,Widget,Widgets,Dashboard,Dashboards,_"
 }
