--- a/packages/akamaiattacks/.jslint.conf
+++ b/packages/akamaiattacks/.jslint.conf
@@ -1,3 +1,3 @@
 {
-  "predef": "Template,moment,Meteor,HTTP,Settings,CountryTraffic,Npm,_,AkamaiTraffic,TrafficWidget,MongoInternals,Mongo,SimpleSchema,Widget"
+  "predef": "Template,moment,Meteor,HTTP,Settings,CountryAttacks,Npm,_,AkamaiAttacks,AttacksWidget,MongoInternals,Mongo,SimpleSchema,Widget"
 }
