connection speed widget

--- a/packages/connection-speed/.jslint.conf
+++ b/packages/connection-speed/.jslint.conf
@@ -1,3 +1,3 @@
 {
-  "predef": "Settings,Package,Npm,Meteor,Template,ConnectionSpeedWidget,IMonCountry,IMonCountries,ConnectionSpeed,SimpleSchema,Mongo,_,Widget"
+  "predef": "Settings,Package,Npm,Meteor,Template,ConnectionSpeedWidget,IMonCountry,IMonCountries,ConnectionSpeed,SimpleSchema,Mongo,_,Widget,d3"
 }
