--- a/packages/herdict/.jslint.conf
+++ b/packages/herdict/.jslint.conf
@@ -1,3 +1,3 @@
 {
-  "predef": "Template,Meteor,HTTP,Settings,Npm,_,HerdictWidget,Mongo,SimpleSchema,Widget,Countries,Herdict,Package"
+  "predef": "CountryLists,HTMLScraper,Template,Meteor,HTTP,Settings,Npm,_,HerdictWidget,Mongo,SimpleSchema,Widget,Countries,Herdict,Package"
 }
