--- a/packages/kaspersky/.jslint.conf
+++ b/packages/kaspersky/.jslint.conf
@@ -1,3 +1,3 @@
 {
-  "predef": "Settings,CountryMetrics,moment,Mongo,SimpleSchema,_,HTTP,Package,Npm"
+  "predef": "Template,KasperskyWidget,Kaspersky,Widget,MongoInternals,Meteor,Settings,CountryMetrics,moment,Mongo,SimpleSchema,_,HTTP,Package,Npm"
 }
