--- a/packages/lumen/.jslint.conf
+++ b/packages/lumen/.jslint.conf
@@ -1,3 +1,3 @@
 {
-  "predef": "LumenCounts,SimpleSchema,moment,_,Widget,Package,Settings,HTTP,Meteor,Mongo,Assets,Lumen,LumenWidget,Template"
+  "predef": "LumenCounts,SimpleSchema,moment,_,d3,Widget,Package,Settings,HTTP,Meteor,Mongo,Assets,Lumen,LumenWidget,Template"
 }
