--- a/packages/lumen/authToken.txt.example
+++ b/packages/lumen/authToken.txt.example
@@ -1,1 +1,1 @@
-Replace this line with your Chilling Effects auth token.
+Replace this line with your Chilling Effects auth token and move to authToken.txt
