clean up wiki widgets - #12436, #12337

--- a/packages/wikiedits/.jslint.conf
+++ b/packages/wikiedits/.jslint.conf
@@ -1,3 +1,3 @@
 {
-  "predef": "WikiEditCounts,SimpleSchema,BinnedWikiEdits,SyncedCron,Package,Random,Template,Settings,EditsOverTime,_,Npm,Mongo,MongoInternals,WikiWidget,Widget,Tracker,Edits,Meteor,WikiEdits,moment"
+  "predef": "Random,Template,Settings,ThrottledWikiEdits,_,Npm,Mongo,MongoInternals,Wikipedias,Widget,Tracker,Edits,Meteor,WikiEdits,moment"
 }
