--- a/packages/change-org/.jslint.conf
+++ b/packages/change-org/.jslint.conf
@@ -1,3 +1,3 @@
 {
-  "predef": "WorldCountries,d3,Template,moment,Meteor,HTTP,Settings,CountryAttacks,Npm,_,AkamaiAttacks,AttacksWidget,MongoInternals,Mongo,SimpleSchema,Widget"
+  "predef": "ChangePetitions,d3,Template,moment,Meteor,Settings,CountryInfo,Npm,_,ChangeOrg,ChangeOrgWidget,MongoInternals,Mongo,SimpleSchema,Widget,Package"
 }
