--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   },
   "dependencies": {
     "babel-runtime": "^6.23.0",
-    "bcrypt": "^1.0.2"
+    "bcrypt": "^1.0.2",
+    "react": "^15.4.2",
+    "react-addons-pure-render-mixin": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "simpl-schema": "^0.2.3"
   },
   "devDependencies": {},
   "repository": {
