--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "bcrypt": "^1.0.2",
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "simpl-schema": "^0.2.3"
+    "react-dom": "^15.4.2"
   },
   "devDependencies": {},
   "repository": {
